[gd_scene load_steps=9 format=3 uid="uid://dh8m6cw6t1mio"]

[ext_resource type="Texture2D" uid="uid://c8tunnh55omf5" path="res://Assets/1726215227804.jpg" id="1_it6a7"]
[ext_resource type="Script" path="res://AdventureMode/MainMenu/trophy_menu.gd" id="1_sgl23"]
[ext_resource type="FontFile" uid="uid://cug67l2gwtw6a" path="res://Assets/LuckiestGuy-Regular.ttf" id="2_d468n"]
[ext_resource type="PackedScene" uid="uid://cuphn3s45hcsf" path="res://AdventureMode/MenuButtons/back_to_adventure_menu.tscn" id="3_37wd3"]
[ext_resource type="Texture2D" uid="uid://74h7dq5ktqim" path="res://Assets/1726215227796.png" id="3_hhfgk"]
[ext_resource type="Texture2D" uid="uid://bjvvubh2q2b2q" path="res://Assets/1726215227792.png" id="5_avtkr"]
[ext_resource type="Texture2D" uid="uid://chmmpi4bbk7xu" path="res://Assets/1726215227787.png" id="6_0imlf"]

[sub_resource type="LabelSettings" id="LabelSettings_gbcxl"]
font = ExtResource("2_d468n")
font_size = 45
outline_size = 25
outline_color = Color(0.04, 0.04, 0.04, 1)

[node name="TrophyMenu" type="Node2D"]
script = ExtResource("1_sgl23")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1220.5, 553)
scale = Vector2(1.05792, 1.03704)
texture = ExtResource("1_it6a7")

[node name="Back" parent="." instance=ExtResource("3_37wd3")]
position = Vector2(228, 113)

[node name="NoTrophyLabel" type="Label" parent="."]
offset_left = 910.0
offset_top = 1034.0
offset_right = 1536.0
offset_bottom = 1083.0
text = "Collect your first trophy!"
label_settings = SubResource("LabelSettings_gbcxl")

[node name="BronzeTrophy" type="Sprite2D" parent="."]
position = Vector2(468, 609)
scale = Vector2(0.503472, 0.437975)
texture = ExtResource("3_hhfgk")

[node name="Label" type="Label" parent="BronzeTrophy"]
offset_left = -574.014
offset_top = 545.693
offset_right = 549.986
offset_bottom = 698.693
text = "After beating the level 5 Boss, 
your first trophy is here!
BE proud of it!"
label_settings = SubResource("LabelSettings_gbcxl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SilverTrophy" type="Sprite2D" parent="."]
position = Vector2(1985, 596)
scale = Vector2(0.476794, 0.413259)
texture = ExtResource("5_avtkr")

[node name="Label" type="Label" parent="SilverTrophy"]
offset_left = -566.282
offset_top = 571.07
offset_right = 571.718
offset_bottom = 776.07
text = "This was tought, but congratulations!
Your Silver trophy is here, to remind you:
The change to beat all of your competitors
 is real!"
label_settings = SubResource("LabelSettings_gbcxl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChampionTrophy" type="Sprite2D" parent="."]
position = Vector2(1211, 586)
scale = Vector2(0.506915, 0.446311)
texture = ExtResource("6_0imlf")

[node name="Label2" type="Label" parent="ChampionTrophy"]
offset_left = -552.361
offset_top = 569.11
offset_right = 585.639
offset_bottom = 774.11
text = "You did it!
Here is your champion trophy!
FOR BEATING ALL OF YOUR COMPETITOn!"
label_settings = SubResource("LabelSettings_gbcxl")
horizontal_alignment = 1
vertical_alignment = 1
